k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: howitt-worker
  name: howitt-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      service: howitt-worker
  template:
    metadata:
      labels:
        service: howitt-worker
    spec:
      containers:
        - image: ghcr.io/jacobh/howitt-worker:main@${GITHUB_SHA}
          imagePullPolicy: Always
          name: howitt-worker
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
