k8s/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: howitt-web-api
  name: howitt-web-api
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  selector:
    service: howitt-web-api
