k8s/web-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: howitt-web-api
  name: howitt-web-api
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  selector:
    service: howitt-web-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: howitt-web-api
  name: howitt-web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: howitt-web-api
  template:
    metadata:
      labels:
        service: howitt-web-api
    spec:
      containers:
        - image: ghcr.io/jacobh/howitt-web-api:main
          imagePullPolicy: Always
          name: howitt-web-api
          ports:
            - containerPort: 8000
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
