k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: howitt-webui
  name: howitt-webui
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: howitt-webui
