k8s/webui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: howitt-webui
  name: howitt-webui
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: howitt-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: howitt-webui
  name: howitt-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      service: howitt-webui
  template:
    metadata:
      labels:
        service: howitt-webui
    spec:
      containers:
        - image: ghcr.io/jacobh/howitt-webui:main
          imagePullPolicy: Always
          name: howitt-webui
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
