k8s/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: howittplains-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: www-to-non-www
spec:
  redirectRegex:
    regex: ^https?://www\.howittplains\.net/(.*)
    replacement: https://howittplains.net/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: howitt
  annotations:
    cert-manager.io/issuer: "howittplains-http"
    traefik.ingress.kubernetes.io/router.middlewares: default-howittplains-redirect-https@kubernetescrd,default-www-to-non-www@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
   - hosts:
       - howittplains.net
       - www.howittplains.net
       - api.howittplains.net
       - ts-api.howittplains.net
     secretName: tls-howittplains-ingress-http
  rules:
  - host: howittplains.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: howitt-webui
            port:
              number: 80
  - host: www.howittplains.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: howitt-webui
            port:
              number: 80
  - host: api.howittplains.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: howitt-web-api
            port:
              number: 80
  - host: ts-api.howittplains.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: howitt-ts-api
            port:
              number: 80
